kubernetes/ocp-home/applications/home-assistant/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/instance: home-assistant
      app.kubernetes.io/name: home-assistant
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: home-assistant
        app.kubernetes.io/name: home-assistant
    spec:
      automountServiceAccountToken: true
      serviceAccountName: home-assistant
      hostNetwork: true
      containers:
        # TODO: Remove securityContext.runAsUser when base image updates to s6-overlay >= v3.2.0
        # Current base image uses s6-overlay v3.1.6.2 which lacks Kubernetes non-root support
        # privileged: true needed for DHCP watcher (CAP_NET_RAW)
        # PR: https://github.com/home-assistant/docker-base/pull/342
        - image: 'ghcr.io/home-assistant/home-assistant:2026.4.4'
          imagePullPolicy: IfNotPresent
          name: home-assistant
          securityContext:
            runAsUser: 0
            privileged: true
          ports:
            - containerPort: 8123
              name: http
              protocol: TCP
            - containerPort: 5683
              name: coiot-udp
              protocol: UDP
            - containerPort: 5353
              name: homekit-udp
              protocol: UDP
            - containerPort: 21063
              name: homekit-tcp
              protocol: TCP
            - containerPort: 21064
              name: homekit-tcp-1
              protocol: TCP
          volumeMounts:
          - mountPath: /config
            name: config
          resources:
            limits:
              cpu: 1000m
        - image: ghcr.io/coder/code-server:4.107.0
          imagePullPolicy: IfNotPresent
          name: codeserver
          args:
            - "--auth"
            - "none"
            - "--port"
            - "12321"
            - "/config"
          ports:
            - containerPort: 12321
              name: codeserver
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: config
          resources:
            limits:
              cpu: 1000m
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: home-assistant-config
